# tp-oneaccess

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README  configure.ac  oneaccess-cbqos-ddcfg.pl  oneaccess-cbqos-torruscfg.pl  oneaccess.qos.xml  tp-oneaccess-ddcfg.pl  tp-oneaccess-torruscfg.pl  tp-oneaccess.pod
Collector/: OneAccess_QoS.pm  OneAccess_QoS_Params.pm  OneOS_cbQoS.pm  OneOS_cbQoS_Params.pm
DevDiscover/: OneAccess.pm  OneAccess_QoS.pm  OneOS_cbQoS.pm
